created animations & first tests

--- a/Sigmoid convergence rate.ipynb
+++ b/Sigmoid convergence rate.ipynb
@@ -16,6 +16,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "TO UPDATE WITH BATCH SGD"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Sigmoid neurons"
    ]
   },
