--- a/report/biblio.bib
+++ b/report/biblio.bib
@@ -60,3 +60,10 @@
   journal={arXiv preprint arXiv:1811.08888},
   year={2018}
 }
+
+@inproceedings{visualloss,
+  title={Visualizing the Loss Landscape of Neural Nets},
+  author={Li, Hao and Xu, Zheng and Taylor, Gavin and Studer, Christoph and Goldstein, Tom},
+  booktitle={Neural Information Processing Systems},
+  year={2018}
+}
