some part of report

--- a/report/biblio.bib
+++ b/report/biblio.bib
@@ -67,3 +67,10 @@
   booktitle={Neural Information Processing Systems},
   year={2018}
 }
+
+@article{jacot2018neural,
+  title={Neural Tangent Kernel: Convergence and Generalization in Neural Networks},
+  author={Jacot, Arthur and Gabriel, Franck and Hongler, Cl{\'e}ment},
+  journal={arXiv preprint arXiv:1806.07572},
+  year={2018}
+}
