--- a/report/biblio.bib
+++ b/report/biblio.bib
@@ -74,3 +74,11 @@
   journal={arXiv preprint arXiv:1806.07572},
   year={2018}
 }
+
+@inproceedings{le2007continuous,
+  title={Continuous neural networks},
+  author={Le Roux, Nicolas and Bengio, Yoshua},
+  booktitle={Artificial Intelligence and Statistics},
+  pages={404--411},
+  year={2007}
+}
